attempt 2 to fix background issue on mobile

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,12 +1,6 @@
 body{
-    background-color: #9FB1BC;
-    background-image: url("https://i.imgur.com/5vkTr0E.jpg");
-    background-position: center;
-    background-repeat: no-repeat;
+    background: url("https://i.imgur.com/5vkTr0E.jpg") no-repeat center center fixed;
     background-size: cover;
-    background-attachment: fixed;
-    height: 100%;
-    width: 100%;
     min-width: 500px;
 }
 
@@ -237,14 +231,8 @@ footer{
 @media (min-width: 1024px){
 
     body{
-        background-color: #9FB1BC;
-        background-image: url("https://i.imgur.com/5vkTr0E.jpg");
-        background-position: top;
-        background-repeat: no-repeat;
+        background: url("https://i.imgur.com/5vkTr0E.jpg") no-repeat center center fixed;
         background-size: cover;
-        background-attachment: fixed;
-        height: 100%;
-        width: 100%;
     }
 
     .logo > h1{
